Add db Transaction type